Fix overflow problem.

--- a/src/app/views/detail/detail.component.scss
+++ b/src/app/views/detail/detail.component.scss
@@ -21,7 +21,6 @@ input, textarea {
 
     .main {
         flex: 3 0 360px;
-        max-width: 100%;
         background-color: $bg-1;
         height: fit-content;
 
